css/style.css
/* ... */
    .ftco-footer .block-21 .text .heading a {
      color: rgba(255, 255, 255, 0.9); }
      .ftco-footer .block-21 .text .heading a:hover, .ftco-footer .block-21 .text .heading a:active, .ftco-footer .block-21 .text .heading a:focus {
        color: #1eaaf1; }
  .ftco-footer .block-21 .text .meta > div {
    display: inline-block;
    font-size: 12px;
    margin-right: 5px; }
    .ftco-footer .block-21 .text .meta > div a {
      color: gray; }

.ftco-footer-social li {
  list-style: none;
  margin: 0 10px 0 0;
  display: inline-block; }
  .ftco-footer-social li a {
    height: 40px;
    width: 40px;
    display: block;
    float: left;
    background: rgba(255, 255, 255, 0.05);
    border-radius: 50%;
    position: relative; }
    .ftco-footer-social li a span {
      position: absolute;
      font-size: 20px;
      top: 50%;
      left: 50%;
      -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%); }
    .ftco-footer-social li a:hover {
      color: #fff; }

.footer-small-nav > li {
  display: inline-block; }
  .footer-small-nav > li a {
    margin: 0 10px 10px 0; }
    .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
      color: #1eaaf1; }

.media .ftco-icon {
  width: 100px; }
  .media .ftco-icon span {
    color: #1eaaf1; }

#map {
  width: 100%; }
  @media (max-width: 767.98px) {
    #map {
      height: 300px; } }

@-webkit-keyframes pulse {
  0% {
    -webkit-box-shadow: 0 0 0 0 rgba(30, 170, 241, 0.4); }
  70% {
    -webkit-box-shadow: 0 0 0 30px rgba(30, 170, 241, 0); }
  100% {
    -webkit-box-shadow: 0 0 0 0 rgba(30, 170, 241, 0); } }

@keyframes pulse {
  0% {
    -moz-box-shadow: 0 0 0 0 rgba(30, 170, 241, 0.4);
    -webkit-box-shadow: 0 0 0 0 rgba(30, 170, 241, 0.4);
    box-shadow: 0 0 0 0 rgba(30, 170, 241, 0.4); }
  70% {
    -moz-box-shadow: 0 0 0 30px rgba(30, 170, 241, 0);
    -webkit-box-shadow: 0 0 0 30px rgba(30, 170, 241, 0);
    box-shadow: 0 0 0 30px rgba(30, 170, 241, 0); }
  100% {
    -moz-box-shadow: 0 0 0 0 rgba(30, 170, 241, 0);
    -webkit-box-shadow: 0 0 0 0 rgba(30, 170, 241, 0);
    box-shadow: 0 0 0 0 rgba(30, 170, 241, 0); } }

.heading-section .subheading {
  font-weight: 500;
  font-size: 16px;
  display: block;
  margin-bottom: 0;
  text-transform: uppercase;
  letter-spacing: 2px;
  color: rgba(0, 0, 0, 0.9);
  position: relative; }

.heading-section h2 {
  font-size: 44px;
  font-weight: 600;
  color: #fda638; }
  .heading-section h2 span {
    color: #5d50c6; }
  @media (max-width: 767.98px) {
    .heading-section h2 {
      font-size: 28px; } }

.heading-section.heading-section-white .subheading {
  color: rgba(255, 255, 255, 0.7); }

.heading-section.heading-section-white h2 {
  font-size: 40px;
  color: #fff; }

.heading-section.heading-section-white p {
  color: rgba(255, 255, 255, 0.9); }

.heading-section.heading-section-black h2 {
  color: #000000; }

.hotel-img,
.img,
.blog-img,
.user-img {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center; }

.testimony-section {
  position: relative; }
  .testimony-section .owl-carousel {
    margin: 0; }
  .testimony-section .owl-carousel .owl-stage-outer {
    padding-top: 4em;
    padding-bottom: 2em;
    position: relative; }
  .testimony-section .owl-nav {
    position: absolute;
    top: 100%;
    width: 100%; }
    .testimony-section .owl-nav .owl-prev,
    .testimony-section .owl-nav .owl-next {
      position: absolute;
      -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
      transform: translateY(-50%);
      margin-top: -10px;
      outline: none !important;
      -moz-transition: all 0.3s ease;
      -o-transition: all 0.3s ease;
      -webkit-transition: all 0.3s ease;
      -ms-transition: all 0.3s ease;
      transition: all 0.3s ease;
      opacity: 0; }
      .testimony-section .owl-nav .owl-prev span:before,
      .testimony-section .owl-nav .owl-next span:before {
        font-size: 30px;
        color: rgba(0, 0, 0, 0.2);
        -moz-transition: all 0.3s ease;
        -o-transition: all 0.3s ease;
        -webkit-transition: all 0.3s ease;
        -ms-transition: all 0.3s ease;
        transition: all 0.3s ease; }
      .testimony-section .owl-nav .owl-prev:hover span:before, .testimony-section .owl-nav .owl-prev:focus span:before,
      .testimony-section .owl-nav .owl-next:hover span:before,
      .testimony-section .owl-nav .owl-next:focus span:before {
        color: #000000; }
    .testimony-section .owl-nav .owl-prev {
      left: 50%;
      margin-left: -80px; }
    .testimony-section .owl-nav .owl-next {
      right: 50%;
      margin-right: -80px; }
  .testimony-section:hover .owl-nav .owl-prev,
  .testimony-section:hover .owl-nav .owl-next {
    opacity: 1; }
  .testimony-section:hover .owl-nav .owl-prev {
    left: 50%;
    margin-left: -80px; }
  .testimony-section:hover .owl-nav .owl-next {
    right: 50%;
    margin-right: -80px; }
  .testimony-section .owl-dots {
    text-align: center; }
    .testimony-section .owl-dots .owl-dot {
      width: 10px;
      height: 10px;
      margin: 5px;
      border-radius: 50%;
      background: rgba(0, 0, 0, 0.2); }
      .testimony-section .owl-dots .owl-dot.active {
        background: #1eaaf1; }
  .testimony-section .owl-item {
    opacity: .1 !important;
    margin-top: 20px; }
    .testimony-section .owl-item.center {
      padding-bottom: 30px;
      margin-top: 0;
      opacity: 1 !important; }
      .testimony-section .owl-item.center p {
        font-size: 18px; }

.testimony-wrap {
  display: block;
  position: relative;
  background: rgba(255, 255, 255, 0.1);
  color: rgba(0, 0, 0, 0.8); }
  .testimony-wrap .user-img {
    width: 120px;
    height: 120px;
    border-radius: 50%;
    position: relative; }
  .testimony-wrap .text {
    width: calc(100% - 120px);
    position: relative; }
/* ... */

